@@ -19,17 +19,7 @@ PID pid_controller_speed(&pid_input_angle, &pid_output_speed, &pid_setpoint_angl
 //  * Feed the current angle to the speed PID to obtain the desired speed to ge to the desired angle (obtained be
 //  * Adjust motor speeds accordingly
 
-void get_pid_motor_speed(int argc, ...) {
-  va_list valist;
-  va_start(valist, argc);
-
-  int16_t * motor_speed = va_arg(valist, int16_t *);
-  float angle = va_arg(valist, float);
-  float angle_old = va_arg(valist, float);
-  int16_t m1 = va_arg(valist, int16_t);
-  int16_t m2 = va_arg(valist, int16_t);
-  va_end(valist);
-
+void get_pid_motor_speed(int16_t * motor_speed, float angle, float angle_old, int16_t m1, int16_t m2) {
   // for now our target speed **ALWAYS** is zero
   pid_setpoint_speed = 0;
   // we need to predict our current speed for the inputs we have
